// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag or CheckTag :Tag:props :checked 1`] = `
<span
  checked="true"
  class="t-tag t-tag--default t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :closable 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
>
  <!---->
  <!---->
  <svg
    class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
</span>
`;

exports[`Tag or CheckTag :Tag:props :disabled 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark t-is-disabled t-tag--disabled"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :maxWidth 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis"
  style="max-width: 100px;"
>
  <!---->
  <span
    class="t-tag--text"
    style="max-width: 100px;"
  >
    <!---->
  </span>
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :shape:mark 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark t-tag--mark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :shape:round 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark t-tag--round"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :shape:square 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :size:large 1`] = `
<span
  class="t-tag t-tag--default t-size-l t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :size:medium 1`] = `<!---->`;

exports[`Tag or CheckTag :Tag:props :size:small 1`] = `<!---->`;

exports[`Tag or CheckTag :Tag:props :theme: 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :theme:default 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :theme:info 1`] = `
<span
  class="t-tag t-tag--info t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :theme:success 1`] = `
<span
  class="t-tag t-tag--success t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:dark;theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:dark;theme:default 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:dark;theme:info 1`] = `
<span
  class="t-tag t-tag--info t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:dark;theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:dark;theme:success 1`] = `
<span
  class="t-tag t-tag--success t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:dark;theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:light;theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-size-m t-tag--light"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:light;theme:default 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--light"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:light;theme:info 1`] = `
<span
  class="t-tag t-tag--info t-size-m t-tag--light"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:light;theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-size-m t-tag--light"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:light;theme:success 1`] = `
<span
  class="t-tag t-tag--success t-size-m t-tag--light"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:light;theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-size-m t-tag--light"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:plain;theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-size-m t-tag--plain"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:plain;theme:default 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--plain"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:plain;theme:info 1`] = `
<span
  class="t-tag t-tag--info t-size-m t-tag--plain"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:plain;theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-size-m t-tag--plain"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:plain;theme:success 1`] = `
<span
  class="t-tag t-tag--success t-size-m t-tag--plain"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag :Tag:props :variant:plain;theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-size-m t-tag--plain"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag @event: Tag Event passthrough: close 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
>
  <!---->
  <!---->
  <svg
    class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
</span>
`;

exports[`Tag or CheckTag CheckTag:props :checked 1`] = `
<span
  class="t-tag t-tag--check t-tag--default t-tag--checked"
>
  <!---->
</span>
`;

exports[`Tag or CheckTag CheckTag:props :disabled 1`] = `
<span
  class="t-tag t-tag--check t-tag--default t-tag--disabled"
>
  <!---->
</span>
`;

exports[`Tag or CheckTag Tag:slot <icon> 1`] = `
<span
  class="t-tag t-tag--default t-size-m t-tag--dark"
>
  <!---->
  <!---->
  <!---->
</span>
`;
